Obrócono poprawnie ekran + dodano kontrolę jasności.

--- a/libraries/opencv/build.gradle
+++ b/libraries/opencv/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'android-library'
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
         //noinspection GradlePluginVersion
