--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.Strzelnica"
         tools:targetApi="31">
         <activity
-            android:name=".test_camera"
+            android:name=".ActivityCamera"
             android:exported="false" />
         <activity
             android:name=".ActivityUser"
@@ -36,9 +36,6 @@
             android:exported="false" />
         <activity
             android:name=".ActivityHistory"
-            android:exported="false" />
-        <activity
-            android:name=".ActivityCameraSettings"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
